--- a/0-/Clientlist.mediawiki
+++ b/0-/Clientlist.mediawiki
@@ -31,6 +31,7 @@ All current clients should be found here.
 {{ClientTableEntry|Harald| Mobile Phone / Bluetooth | JavaME/C | in development | Player running on Java capable mobile phone }}
 {{ClientTableEntry|Insanity| Graphical / GTK | Python | in development | Simple but complete player }}
 {{ClientTableEntry|JukX| Graphical / GTK | Python | in development | touchscreen orientated  concept }}
+{{ClientTableEntry|j. xmms(2)viewer| console / curses | C++ | in development | simple playlist viewer (no editing) }}
 {{ClientTableEntry|Konfetka| Graphical / Qt4 | C++ | in development | The kid of XMMS1 and Amarok that spent too much time around Yakuake. }}
 {{ClientTableEntry|kuechenstation| console / curses | Python | in development | text mode client with scrolling title, playlist and medialib query }}
 {{ClientTableEntry|lagn| Emacs Mode | emacs-lisp | in development | Control XMMS2 within emacs }}
