Levitation import of page 2542 rev 8995.

--- a/0-/Client:j. xmms(2)viewer.mediawiki
+++ b/0-/Client:j. xmms(2)viewer.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=j. xmms(2)viewer| author=[[Javeed Shaikh]]| website=http://code.l3ib.org/?p=xmmsviewer.git;a=summary| version=[http://code.l3ib.org/?p=xmmsviewer.git;a=summary git] | devlanguage=C++| ui=Console| screenshots=[http://sirius.cine7.net/nyello/screenshots/help.png] [http://sirius.cine7.net/nyello/screenshots/search-and-enqueue.png]| description=hello}}
+{{Client| name=j. xmms(2)viewer| author=[[Javeed Shaikh]]| website=http://code.l3ib.org/?p=xmmsviewer.git;a=summary| version=[http://code.l3ib.org/?p=xmmsviewer.git;a=summary git] | devlanguage=C++| ui=Console| screenshots=[http://sirius.cine7.net/nyello/screenshots/help.png] [http://sirius.cine7.net/nyello/screenshots/search-and-enqueue.png]| description=A simple playlist viewer client. No playlist editing is supported.}}
