--- a/1-Talk/Versioning.mediawiki
+++ b/1-Talk/Versioning.mediawiki
@@ -1,3 +1,6 @@
+== Dr P ==
+* Dr Poche (belgian comic hero by Wasterlain)
+
 == Dr K ==
 * Dr Kelso from Scrubs
 * Dr Kosmos http://en.wikipedia.org/wiki/Doktor_Kosmos
