Levitation import of page 2515 rev 9004.

--- a/0-/Client:xmms2-cdinfo.mediawiki
+++ b/0-/Client:xmms2-cdinfo.mediawiki
@@ -2,8 +2,8 @@
 Client
 |name=xmms2-freedb
 |author=Tomasz Sobczyk
-|website=[http://asth.net/(+xmms2freedb)]
-|version=0.1.1
+|website=[http://asth.net/(+blog)/(+neK:9-11:8)]
+|version=0.2
 |devlanguage=C++
 }}
 === What is xmms2-freedb? ===
