--- a/0-/XMMS2 Vision.mediawiki
+++ b/0-/XMMS2 Vision.mediawiki
@@ -183,3 +183,7 @@ Note that I left out the idea of organisation of the music, which I'm very fond 
 Version 4 is a bit verbose, but it contains all I'd expect from our Vision. Anybody else wants to add or suggest something?
 
 [[User:Theefer|Theefer]] 22:53, 26 February 2009 (UTC)
+
+An innovative tool for audiophiles and their music.
+
+[[User:regalia]] 01:20, 30 November 2010
