--- a/0-/Contribs.mediawiki
+++ b/0-/Contribs.mediawiki
@@ -30,13 +30,13 @@ Good for using in hotkeys(specially if you have a multimedia keyboard ;) )
 
 {{Contrib| title=Medialib updater| author=Sebastian Sareyko| description=A python script that removes unavailable media from the Media Library and that adds newly found stuff that has not yet been added.| moreinfo=| files=* [http://nooms.de/media/xmms2-mlib-update.py xmms2-mlib-update.py]}}
 
-{{Contrib| title=xmms2_random_album | author=ashtophet| description=Quick shell script to add a random album to a dedicated playlist. It will be obsolete when random album playback is available natively (using collection advanced features). If you use it, find annoyances, improvements, suggestions... please, contact me (mail is at source).| moreinfo=| files=* [http://www.ashtophet.org/xmms2_random_album.sh xmms2_random_album.sh] [http://img264.imageshack.us/img264/1149/xmms2randomalbum01fu9.png screenshot01] [http://img115.imageshack.us/img115/7356/xmms2randomalbum02km5.png screenshot02]}}
+{{Contrib| title=xmms2_random_album | author=ashtophet| description=Quick shell script to add a random album to a dedicated playlist. It will be obsolete when random album playback is available natively (using collection advanced features). If you use it, find annoyances, improvements, suggestions... please, contact me (mail is at source).| moreinfo=| files=* [http://www.ashtophet.org/scripts/xmms2_random_album-0.0.5.sh xmms2_random_album.sh] [http://img264.imageshack.us/img264/1149/xmms2randomalbum01fu9.png screenshot01] [http://img115.imageshack.us/img115/7356/xmms2randomalbum02km5.png screenshot02]}}
 
-{{Contrib| title=xmms2rnd | author=ashtophet| description=Shell script based on xmms2_random_album to add a random album from selected (1st arg.) artist. | moreinfo= Tested here ("it works for me (tm)") for its really simply usage: xmms2rnd "Artist". Read the source. | files=* [http://www.ashtophet.org/xmms2rnd.sh xmms2rnd.sh]}}
+{{Contrib| title=xmms2rnd | author=ashtophet| description=Shell script based on xmms2_random_album to add a random album from selected (1st arg.) artist. | moreinfo= Tested here ("it works for me (tm)") for its really simply usage: xmms2rnd "Artist". Read the source. | files=* [http://www.ashtophet.org/scripts/xmms2rnd-0.0.1.sh xmms2rnd.sh]}}
 
-{{Contrib| title=xmms2lyrics | author=ashtophet| description=Very simple shell script to fetch current xmms2 song lyrics (w3m) and show them (w3m) using google's(tm) "feeling lucky" feature. Based on  [http://www.ashtophet.org//mpdlyrics-0.0.6 mpdlyrics].| moreinfo=| files=* [http://www.ashtophet.org/xmms2lyrics.sh xmms2lyrics.sh]}}
+{{Contrib| title=xmms2lyrics | author=ashtophet| description=Very simple shell script to fetch current xmms2 song lyrics (w3m) and show them (w3m) using google's(tm) "feeling lucky" feature. Based on  mpdlyrics.| moreinfo=| files=* [http://www.ashtophet.org/scripts/xmms2lyrics-0.0.1.sh xmms2lyrics.sh]}}
 
-{{Contrib| title=xmms2wiki | author=ashtophet| description=Very simple shell script to fetch wikipedia article on current xmms2 playing song and show it using w3m. Based on [http://www.ashtophet.org/mpdwiki-0.0.3.1 mpdwiki]. | moreinfo=| files=* [http://ashtophet.freehostia.com/xmms2wiki.sh xmms2wiki.sh]}}
+{{Contrib| title=xmms2wiki | author=ashtophet| description=Very simple shell script to fetch wikipedia article on current xmms2 playing song and show it using w3m. Based on [http://www.ashtophet.org/mpdwiki-0.0.3.1 mpdwiki]. | moreinfo=| files=* [http://www.ashtophet.org/xmms2wiki-0.0.1.sh xmms2wiki.sh]}}
 
 {{Contrib| title=Fvwm menu | author=ashtophet| description=Simple fvwm2 menu to control xmms2. Based on univac's fvwm config. | moreinfo=| files=* [http://www.ashtophet.org/screenshots.html config]}}
 
