--- a/10-Template/ReleaseStatus.mediawiki
+++ b/10-Template/ReleaseStatus.mediawiki
@@ -6,7 +6,7 @@
 '''Developer''': [[Release:DrNo | 0.7 DrNo]]
 
 '''Notes''':
-* DrNo was released 2009-02-19,<br /> [[Download XMMS2 | check it out]] and [[Reporting bugs | report bugs]]!
+* DrNo was released 2010-02-19,<br /> [[Download XMMS2 | check it out]] and [[Reporting bugs | report bugs]]!
 * XMMS2 is still under development.<br />You may [[Developer Corner|hack and help]] if you wish. :)
-* More up-to-date code can be found <br /> in the [http://git.xmms.se/?p=xmms2-devel.git;a=summary xmms2-devel.git] tree.
+* More up-to-date code can be found <br /> in the [http://git.xmms.se/cgit.cgi/xmms2/xmms2-devel/ xmms2-devel.git] tree.
 </div>
