Levitation import of page 2544 rev 9020.

--- a/0-/Client:nymp.mediawiki
+++ b/0-/Client:nymp.mediawiki
@@ -2,7 +2,7 @@
 Client
 |image=nymp.png
 |name=nymp
-|author=Thammi
+|author=[http://chaossource.net/ Thammi]
 |website=[https://github.com/thammi/nymp nymp@github]
 |version=0.0.1
 |devlanguage=Python
