--- a/0-/Client:xmmsfs.mediawiki
+++ b/0-/Client:xmmsfs.mediawiki
@@ -2,7 +2,7 @@
 Client
 |image=
 |name=xmmsfs
-|author=[2ck.posterous.com 2ck]
+|author=[http://2ck.posterous.com 2ck]
 |website=[http://twock.host-ed.net/scripts/xmmsfs.rb.html]
 |devlanguage=Ruby
 |ui=FUSE
