Levitation import of page 2484 rev 9027.

--- a/0-/Finances.mediawiki
+++ b/0-/Finances.mediawiki
@@ -11,4 +11,14 @@
 |2008-12-31||interest              ||    +26.26||  9879.47 
 |-
 |2008-02-06||advance fosdem 2009   ||  -7500.00||  2379.47
+|-
+|2008-03-xx||fosdem 2009           ||  -1486.00||   893.47
+|-
+|2010-02-08||GSoC mentoring 2008   || +21499.50|| 22392.97
+|-
+|2010-02-25||XMMS2con              || -13150.00||  9242.97
+|-
+|2010-03-12||GSoC mentoring 2009   || +10455.88|| 19698.85
+|-
+|2010-12-20||GSoC mentoring 2010   || +13449.62|| 33148.47
 |}
