Added to 'Howto' category
Levitation import of page 2049 rev 9031 (minor).

--- a/0-/Using ICES Output.mediawiki
+++ b/0-/Using ICES Output.mediawiki
@@ -60,3 +60,5 @@ The port of the icecast server.
 
 == Playing ==
 Now just set output.plugin to ices(using ''xmms2 config output.plugin = ices''),load up your playlist and do ''xmms2 play''
+
+[[Category:Howto]]
