Levitation import of page 2546 rev 9039 (minor).

--- a/0-/Client:xmmsfs.mediawiki
+++ b/0-/Client:xmmsfs.mediawiki
@@ -1,6 +1,7 @@
 {{
 Client
 |name=xmmsfs
+|version=1.0
 |author=[http://2ck.posterous.com 2ck]
 |website=[http://code.google.com/p/xmmsfs]
 |devlanguage=Ruby
